Working Bug reported

--- a/WolvenKit/Views/Shell/RibbonView.xaml
+++ b/WolvenKit/Views/Shell/RibbonView.xaml
@@ -1484,7 +1484,7 @@
                     Name="Help"
                     Width="auto"
                     Header="Help"
-                    Visibility="Collapsed">
+                    Visibility="Visible">
 
                     <!--  BugReport Button  -->
                     <syncfusion:RibbonButton
