--- a/WolvenKit/Views/Shell/RibbonView.xaml
+++ b/WolvenKit/Views/Shell/RibbonView.xaml
@@ -1530,7 +1530,8 @@
                         IconStretch="Fill"
                         IconType="Icon"
                         Label="About"
-                        SizeForm="Large">
+                        SizeForm="Large"
+                        Visibility="Collapsed">
                         <syncfusion:RibbonButton.IconTemplate>
                             <DataTemplate>
                                 <iconPacks:PackIconCodicons
