--- a/WolvenKit/Views/Shell/StatusBarView.xaml
+++ b/WolvenKit/Views/Shell/StatusBarView.xaml
@@ -1,21 +1,20 @@
 <catel:UserControl
- x:Class="WolvenKit.Views.Shell.StatusBarView"
- xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
- xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
- xmlns:Fluent="urn:fluent-ribbon"
- xmlns:WolvenKit="clr-namespace:WolvenKit"
- xmlns:catel="http://schemas.catelproject.com"
- xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
- xmlns:hc="https://handyorg.github.io/handycontrol"
- xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
- xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
- xmlns:orccontrols="http://schemas.wildgums.com/orc/controls"
- xmlns:orchestra="http://schemas.wildgums.com/orchestra"
- xmlns:orctheming="http://schemas.wildgums.com/orc/theming"
- xmlns:shell="clr-namespace:WolvenKit.ViewModels.Shell;assembly=WolvenKit.App"
- mc:Ignorable="d"
- d:DataContext="{d:DesignInstance Type=shell:StatusBarViewModel}"
- >
+    x:Class="WolvenKit.Views.Shell.StatusBarView"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:Fluent="urn:fluent-ribbon"
+    xmlns:WolvenKit="clr-namespace:WolvenKit"
+    xmlns:catel="http://schemas.catelproject.com"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:hc="https://handyorg.github.io/handycontrol"
+    xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:orccontrols="http://schemas.wildgums.com/orc/controls"
+    xmlns:orchestra="http://schemas.wildgums.com/orchestra"
+    xmlns:orctheming="http://schemas.wildgums.com/orc/theming"
+    xmlns:shell="clr-namespace:WolvenKit.ViewModels.Shell;assembly=WolvenKit.App"
+    d:DataContext="{d:DesignInstance Type=shell:StatusBarViewModel}"
+    mc:Ignorable="d">
 
     <catel:UserControl.Resources>
         <ResourceDictionary>
@@ -29,121 +28,122 @@
     </catel:UserControl.Resources>
     <Grid>
         <hc:Divider
-         Width="9999"
-         Height="2"
-         Margin="-5,0,0,0"
-         LineStroke="Black"
-         LineStrokeThickness="1"
-         Orientation="Horizontal"
-         Visibility="Hidden"
-         />
+            Width="9999"
+            Height="2"
+            Margin="-5,0,0,0"
+            LineStroke="Black"
+            LineStrokeThickness="1"
+            Orientation="Horizontal"
+            Visibility="Hidden" />
         <Fluent:StatusBar Background="Transparent">
 
-
             <Fluent:StatusBarItem
-             Title="CatFacts"
-             HorizontalAlignment="Left"
-             ToolTip="Show a catfact"
-             Value="Show a catfact"
-             >
+                x:Name="OuterCatfact"
+                Title="CatFacts"
+                HorizontalAlignment="Left"
+                ToolTip="Show Animal Fact"
+                Value="Show Animal Fact">
                 <hc:Tag
-                 Height="28"
-                 Margin="0,0,0,0"
-                 hc:TitleElement.Background="{DynamicResource RegionBrush}"
-                 Background="{DynamicResource GrayBrush10}"
-                 Content="Show Catfact"
-                 FontSize="11"
-                 MouseLeftButtonDown="Tag_MouseLeftButtonDown"
-                 ShowCloseButton="False"
-                 ToolTip="Show a catfact"
-                 >
+                    x:Name="InnerCatfact"
+                    Height="28"
+                    Margin="0,0,0,0"
+                    hc:TitleElement.Background="{DynamicResource RegionBrush}"
+                    Background="{DynamicResource GrayBrush10}"
+                    Content="Show Animal Fact"
+                    FontSize="11"
+                    MouseLeftButtonDown="Tag_MouseLeftButtonDown"
+                    ShowCloseButton="False"
+                    ToolTip="Show Animal Fact">
                     <hc:Tag.Header>
-                        <iconPacks:PackIconRPGAwesome Foreground="{DynamicResource MahApps.Brushes.AccentBase}" Kind="cat" />
+                        <iconPacks:PackIconFontAwesome Foreground="{DynamicResource MahApps.Brushes.AccentBase}" Kind="PawSolid" />
                     </hc:Tag.Header>
-
                 </hc:Tag>
             </Fluent:StatusBarItem>
 
             <Fluent:StatusBarItem
-             Title="Current Project"
-             HorizontalAlignment="Right"
-             ToolTip="Current Project"
-             Value="Displays current project."
-             >
+                Title="Files in project"
+                HorizontalAlignment="Right"
+                ToolTip="Files in project"
+                Value="Displays current files amount in project (including folders).">
+                    <hc:Tag
+                    Height="28"
+                    Margin="5,0,5,0"
+                    hc:TitleElement.Background="{DynamicResource RegionBrush}"
+                    Background="{DynamicResource GrayBrush10}"
+                    FontSize="11"
+                    ShowCloseButton="False"
+                    ToolTip="Current Project">
+                    <StackPanel Orientation="Horizontal">
+
+                        <TextBlock FontSize="11" Text="Files in project : "/>
+                        <TextBlock FontSize="11" Text="{Binding FileCount}"/>
+                    </StackPanel>
+
+                        <hc:Tag.Header>
+                            <iconPacks:PackIconIonicons Foreground="{DynamicResource MahApps.Brushes.AccentBase}" Kind="FilingMD" />
+                        </hc:Tag.Header>
+                    </hc:Tag>
+
+            </Fluent:StatusBarItem>
+
+            <Fluent:StatusBarItem
+                Title="Current Project"
+                HorizontalAlignment="Right"
+                ToolTip="Current Project"
+                Value="Displays current project.">
                 <hc:Tag
-                 Height="28"
-                 Margin="5,0,5,0"
-                 hc:TitleElement.Background="{DynamicResource RegionBrush}"
-                 Background="{DynamicResource GrayBrush10}"
-                 Content="{Binding CurrentProject}"
-                 FontSize="11"
-                 ShowCloseButton="False"
-                 ToolTip="Current Project"
-                 >
+                    Height="28"
+                    Margin="5,0,5,0"
+                    hc:TitleElement.Background="{DynamicResource RegionBrush}"
+                    Background="{DynamicResource GrayBrush10}"
+                    Content="{Binding CurrentProject}"
+                    FontSize="11"
+                    ShowCloseButton="False"
+                    ToolTip="Current Project">
                     <hc:Tag.Header>
                         <iconPacks:PackIconFontAwesome Foreground="{DynamicResource MahApps.Brushes.AccentBase}" Kind="ProjectDiagramSolid" />
                     </hc:Tag.Header>
-
                 </hc:Tag>
             </Fluent:StatusBarItem>
 
             <Fluent:StatusBarItem
-             Title="Version"
-             HorizontalAlignment="Right"
-             ToolTip="Version"
-             Value="Shows the current app version"
-             >
+                Title="Version"
+                HorizontalAlignment="Right"
+                ToolTip="Version"
+                Value="Shows the current app version">
                 <hc:Tag
-                 Height="28"
-                 Margin="0"
-                 hc:TitleElement.Background="{DynamicResource RegionBrush}"
-                 Background="{DynamicResource GrayBrush10}"
-                 Content="{Binding VersionNumber}"
-                 FontSize="11"
-                 ShowCloseButton="False"
-                 ToolTip="Version"
-                 >
+                    Height="28"
+                    Margin="0"
+                    hc:TitleElement.Background="{DynamicResource RegionBrush}"
+                    Background="{DynamicResource GrayBrush10}"
+                    Content="{Binding VersionNumber}"
+                    FontSize="11"
+                    ShowCloseButton="False"
+                    ToolTip="Version">
                     <hc:Tag.Header>
                         <iconPacks:PackIconCodicons Foreground="{DynamicResource MahApps.Brushes.AccentBase}" Kind="Versions" />
                     </hc:Tag.Header>
-
                 </hc:Tag>
             </Fluent:StatusBarItem>
 
-
-
-
-
             <Fluent:StatusBarItem
-             Title="DefaultIcon"
-             Margin="0,0,0,0"
-             HorizontalAlignment="Right"
-             Value="DefaultIcon"
-             >
+                Title="DefaultIcon"
+                Margin="0,0,0,0"
+                HorizontalAlignment="Right"
+                Value="DefaultIcon">
                 <hc:Tag
-                 Width="29"
-                 Height="28"
-                 Margin="0"
-                 hc:TitleElement.Background="{DynamicResource RegionBrush}"
-                 Background="{DynamicResource GrayBrush10}"
-                 FontSize="11"
-                 ShowCloseButton="False"
-                 >
+                    Width="29"
+                    Height="28"
+                    Margin="0"
+                    hc:TitleElement.Background="{DynamicResource RegionBrush}"
+                    Background="{DynamicResource GrayBrush10}"
+                    FontSize="11"
+                    ShowCloseButton="False">
                     <hc:Tag.Header>
                         <iconPacks:PackIconRPGAwesome Foreground="{DynamicResource MahApps.Brushes.AccentBase}" Kind="WolfHowl" />
                     </hc:Tag.Header>
-
                 </hc:Tag>
             </Fluent:StatusBarItem>
         </Fluent:StatusBar>
-
-
     </Grid>
-
-
-
-
-
-
-
 </catel:UserControl>
