--- a/WolvenKit/Views/Shell/StatusBarView.xaml
+++ b/WolvenKit/Views/Shell/StatusBarView.xaml
@@ -61,6 +61,31 @@
             </Fluent:StatusBarItem>
 
             <Fluent:StatusBarItem
+                Title="Selected File"
+                HorizontalAlignment="Right"
+                ToolTip="Selected File"
+                Value="Selected File">
+                <hc:Tag
+                    Height="28"
+                    Margin="5,0,5,0"
+                    hc:TitleElement.Background="{DynamicResource RegionBrush}"
+                    Background="{DynamicResource GrayBrush10}"
+                    FontSize="11"
+                    ShowCloseButton="False"
+                    ToolTip="Selected File">
+                    <StackPanel Orientation="Horizontal">
+
+                        <TextBlock FontSize="11" Text="Selected File/Folder : "/>
+                        <TextBlock FontSize="11"  FontWeight="Bold" Foreground="{DynamicResource MahApps.Brushes.AccentBase}" Text="{Binding SelectedFilename}"/>
+                    </StackPanel>
+
+                    <hc:Tag.Header>
+                        <iconPacks:PackIconFontAwesome Foreground="{DynamicResource MahApps.Brushes.AccentBase}" Kind="FileAltSolid" />
+                    </hc:Tag.Header>
+                </hc:Tag>
+
+            </Fluent:StatusBarItem>
+            <Fluent:StatusBarItem
                 Title="Files in project"
                 HorizontalAlignment="Right"
                 ToolTip="Files in project"
@@ -76,7 +101,7 @@
                     <StackPanel Orientation="Horizontal">
 
                         <TextBlock FontSize="11" Text="Files in project : "/>
-                        <TextBlock FontSize="11" Text="{Binding FileCount}"/>
+                        <TextBlock FontSize="11" FontWeight="Bold" Foreground="{DynamicResource MahApps.Brushes.AccentBase}"  Text="{Binding FileCount}"/>
                     </StackPanel>
 
                         <hc:Tag.Header>
@@ -96,10 +121,14 @@
                     Margin="5,0,5,0"
                     hc:TitleElement.Background="{DynamicResource RegionBrush}"
                     Background="{DynamicResource GrayBrush10}"
-                    Content="{Binding CurrentProject}"
                     FontSize="11"
                     ShowCloseButton="False"
                     ToolTip="Current Project">
+                    <StackPanel Orientation="Horizontal">
+
+                        <TextBlock FontSize="11" Text="Current Project : "/>
+                        <TextBlock FontSize="11" FontWeight="Bold" Foreground="{DynamicResource MahApps.Brushes.AccentBase}"  Text="{Binding CurrentProject}"/>
+                    </StackPanel>
                     <hc:Tag.Header>
                         <iconPacks:PackIconFontAwesome Foreground="{DynamicResource MahApps.Brushes.AccentBase}" Kind="ProjectDiagramSolid" />
                     </hc:Tag.Header>
@@ -116,10 +145,14 @@
                     Margin="0"
                     hc:TitleElement.Background="{DynamicResource RegionBrush}"
                     Background="{DynamicResource GrayBrush10}"
-                    Content="{Binding VersionNumber}"
                     FontSize="11"
                     ShowCloseButton="False"
                     ToolTip="Version">
+                    <StackPanel Orientation="Horizontal">
+
+                        <TextBlock FontSize="11"  Text="Version : "/>
+                        <TextBlock FontSize="11" FontWeight="Bold" Foreground="{DynamicResource MahApps.Brushes.AccentBase}" Text="{Binding VersionNumber}"/>
+                    </StackPanel>
                     <hc:Tag.Header>
                         <iconPacks:PackIconCodicons Foreground="{DynamicResource MahApps.Brushes.AccentBase}" Kind="Versions" />
                     </hc:Tag.Header>
