--- a/WolvenKit/Views/Wizards/FirstSetupWizardView.xaml
+++ b/WolvenKit/Views/Wizards/FirstSetupWizardView.xaml
@@ -3,11 +3,19 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:catel="http://schemas.catelproject.com"
-    xmlns:hc="https://handyorg.github.io/handycontrol"
-    xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
-    ViewModelChanged="UserControl_ViewModelChanged">
+    Initialized="UserControl_Initialized_1"
 
-    <catel:UserControl.Resources />
+    xmlns:hc="https://handyorg.github.io/handycontrol"
+    xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks" xmlns:syncfusion="http://schemas.syncfusion.com/wpf"
+    ViewModelChanged="UserControl_ViewModelChanged" Height="500" MinHeight="500" MinWidth="700" Width="auto">
+
+    <catel:UserControl.Resources>
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="pack://application:,,,/Themes/TextBoxExtendedCustom.xaml" />
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
+    </catel:UserControl.Resources>
     <Grid
         MinWidth="300"
         MinHeight="300"
@@ -20,45 +28,37 @@
             <RowDefinition Height="90*" />
             <RowDefinition Height="10*" />
         </Grid.RowDefinitions>
-
         <StackPanel
-            Margin="15,15,0,0"
+            Margin="-5,-7,0,0"
             HorizontalAlignment="Left"
-            VerticalAlignment="Center"
+            VerticalAlignment="Top"
             Orientation="Horizontal">
-            <Grid>
-                <iconPacks:PackIconCodicons
-                    Grid.Row="0"
-                    Width="50"
-                    Height="50"
-                    Margin="0,0,0,0"
-                    HorizontalAlignment="Center"
-                    VerticalAlignment="Center"
-                    Foreground="{DynamicResource MahApps.Brushes.ThemeForeground}"
-                    Kind="Hubot"
-                    Spin="False"
-                    SpinAutoReverse="False" />
-            </Grid>
-            <StackPanel VerticalAlignment="Center" Orientation="Vertical">
 
-                <TextBlock
-                    Grid.Row="0"
-                    Margin="10,10,0,0"
-                    HorizontalAlignment="Left"
-                    VerticalAlignment="Center"
-                    FontSize="20"
-                    Foreground="{DynamicResource MahApps.Brushes.ThemeForeground}"
-                    Text="Let's set you up!" />
-                <hc:Divider
-                    Margin="0,5,0,0"
-                    HorizontalAlignment="Stretch"
-                    VerticalAlignment="Stretch" />
-            </StackPanel>
+            <iconPacks:PackIconCodicons
+                Grid.Row="0"
+                Width="30"
+                Height="30"
+                Margin="0,0,0,0"
+                HorizontalAlignment="Center"
+                VerticalAlignment="Center"
+                Foreground="{DynamicResource MahApps.Brushes.ThemeForeground}"
+                Kind="Hubot"
+                Spin="False"
+                SpinAutoReverse="False" />
+
+            <TextBlock
+                Grid.Row="0"
+                Margin="10,5,0,0"
+                HorizontalAlignment="Left"
+                VerticalAlignment="Center"
+                FontSize="17"
+                Foreground="{DynamicResource MahApps.Brushes.ThemeForeground}"
+                Text="Let's set you up!" />
         </StackPanel>
 
         <Grid x:Name="PageGrid" Grid.Row="1" />
 
-        <Grid
+        <!--<Grid
             Grid.Row="2"
             Height="95"
             Margin="0,0,0,0"
@@ -102,6 +102,220 @@
                 IsEnabled="{Binding AllFieldIsValid}">
                 <iconPacks:PackIconCodicons Kind="ArrowRight" />
             </Button>
-        </Grid>
+        </Grid>-->
+        <syncfusion:WizardControl
+            Grid.RowSpan="3"
+            Margin="0,33,0,0"
+            Finish="WizardControl_Finish"
+            FinishButtonClosesWindow="True">
+
+            <syncfusion:WizardPage
+                Name="wizardPage1"
+                BackVisibility="Collapsed"
+                HelpVisibility="Collapsed"
+                NextVisibility="Visible"
+                FinishVisibility="Collapsed"
+                CancelVisibility="Collapsed">
+                <Grid Grid.Row="3" VerticalAlignment="Center">
+                    <Grid
+         Margin="5,-90,5,0"
+         HorizontalAlignment="Stretch"
+         Background="{DynamicResource MahApps.Brushes.ThemeBackground}">
+                        <Grid Grid.Row="1" HorizontalAlignment="Stretch">
+                            <StackPanel
+                 Margin="0,0,0,0"
+                 VerticalAlignment="Top"
+                 Orientation="Vertical">
+                                <StackPanel Orientation="Horizontal">
+                                    <iconPacks:PackIconRPGAwesome
+
+                Foreground="{DynamicResource MahApps.Brushes.ThemeForeground}"
+                Kind="WolfHowl"
+                 />
+                                    <TextBlock Margin="5,0,0,0"  VerticalAlignment="Center" Text="Setup a profile (optional)"/>
+
+                                </StackPanel>
+                                <hc:Divider Margin="0,5,0,15"/>
+                                <Grid Margin="0,0,0,0">
+                                    <StackPanel>
+                                        <Grid>
+                                            <Grid.ColumnDefinitions>
+                                                <ColumnDefinition Width="1*"/>
+                                                <ColumnDefinition Width="3*"/>
+
+                                            </Grid.ColumnDefinitions>
+                                            <hc:ImageSelector
+                                             x:Name="imgSelector"
+                                             Width="120"
+                                             Height="120"
+                                             Margin="0,-20,0,0"
+                                             HorizontalAlignment="Left" VerticalAlignment="Center" />
+                                            <StackPanel Grid.Column="1">
+                                                <syncfusion:SfTextInputLayout  Hint="Author">
+                                                    <syncfusion:SfTextBoxExt  />
+                                                </syncfusion:SfTextInputLayout>
+                                                <syncfusion:SfTextInputLayout  Hint="Email">
+                                                    <syncfusion:SfTextBoxExt  />
+                                                </syncfusion:SfTextInputLayout>
+                                            </StackPanel>
+
+                                        </Grid>
+
+
+
+                                        <syncfusion:SfTextInputLayout  Hint="Donate Link">
+                                            <syncfusion:SfTextBoxExt  />
+                                        </syncfusion:SfTextInputLayout>
+                                        <syncfusion:SfTextInputLayout  Hint="Description">
+                                            <syncfusion:SfTextBoxExt  />
+                                        </syncfusion:SfTextInputLayout>
+                                        <TextBlock  Text="Theme (applies after restart.)"/>
+                                        <Border BorderThickness="1" BorderBrush="Gray" CornerRadius="4">
+
+
+                                        <WrapPanel
+                         x:Name="CircleTest"
+                         Margin="0,0,0,0"
+                         HorizontalAlignment="Stretch"
+                         VerticalAlignment="Center"
+                         FlowDirection="LeftToRight" />
+                                        </Border>
+
+                                        <!--<StackPanel Orientation="Horizontal">
+
+
+                                            <TextBlock VerticalAlignment="Center" Text="Profile Image " />
+                                            <hc:ImageSelector
+                                 x:Name="imgSelector"
+                                 Width="100"
+                                 Height="100"
+                                 Margin="64,0,0,0"
+                                 HorizontalAlignment="Left" />
+                                        </StackPanel>
+                                        <hc:TextBox
+                             x:Name="NameTb"
+                             Margin="0,32,0,0"
+                             HorizontalAlignment="Stretch"
+                             hc:InfoElement.Title="Author"
+                             hc:InfoElement.TitlePlacement="Left"
+                             hc:InfoElement.TitleWidth="140"
+                             Style="{StaticResource TextBoxExtend}"
+                             Text="{Binding Author}"
+                            />
+
+                                        <hc:TextBox
+                             x:Name="EmailTb"
+                             Margin="0,32,0,0"
+                             HorizontalAlignment="Stretch"
+                             hc:InfoElement.Title="Email"
+                             hc:InfoElement.TitlePlacement="Left"
+                             hc:InfoElement.TitleWidth="140"
+                             Style="{StaticResource TextBoxExtend}"
+                             Text="{Binding Email}"
+                             />
+                                        -->
+                                        <!--VerifyFunc="IsValidEmail" />-->
+                                        <!--
+
+                                        <hc:TextBox
+                             x:Name="DonateTb"
+                             Margin="0,32,0,0"
+                             HorizontalAlignment="Stretch"
+                             hc:InfoElement.Title="Donate Link"
+                             hc:InfoElement.TitlePlacement="Left"
+                             hc:InfoElement.TitleWidth="140"
+                             Style="{StaticResource TextBoxExtend}"
+                             Text="{Binding DonateLink}"/>
+
+                                        <hc:TextBox
+                             Height="100"
+                             Margin="0,32,10,0"
+                             HorizontalAlignment="Stretch"
+                             VerticalContentAlignment="Top"
+                             hc:InfoElement.Title="Description"
+                             hc:InfoElement.TitlePlacement="Left"
+                             hc:InfoElement.TitleWidth="140"
+                             Text="{Binding DefaultDescription}" />
+                                    </StackPanel>-->
+                                    </StackPanel>
+                                </Grid>
+                            </StackPanel>
+                        </Grid>
+                    </Grid>
+                </Grid>
+            </syncfusion:WizardPage>
+
+            <syncfusion:WizardPage
+                Name="wizardPage2"
+                BackVisibility="Collapsed"
+                HelpVisibility="Collapsed"
+                NextVisibility="Collapsed"
+                FinishVisibility="Visible"
+                CancelVisibility="Collapsed">
+                <Grid Grid.Row="3" VerticalAlignment="Center">
+                    <Grid
+         Margin="5,-90,5,100"
+         HorizontalAlignment="Stretch"
+         Background="{DynamicResource MahApps.Brushes.ThemeBackground}">
+                        <Grid Grid.Row="1" HorizontalAlignment="Stretch">
+                            <StackPanel
+                 Margin="0,0,0,0"
+                 VerticalAlignment="Top"
+                 Orientation="Vertical">
+                                <StackPanel Orientation="Horizontal">
+                                    <iconPacks:PackIconRPGAwesome
+
+                Foreground="{DynamicResource MahApps.Brushes.ThemeForeground}"
+                Kind="WolfHowl"
+                 />
+                                    <TextBlock Margin="5,0,0,0"  VerticalAlignment="Center" Text="Locate Game Data"/>
+
+                                </StackPanel>
+                                <hc:Divider Margin="0,5,0,15"/>
+                                <Grid Margin="0,0,0,0">
+                                    <StackPanel>
+
+
+                                        <Grid>
+                                            <Grid.ColumnDefinitions>
+                                                <ColumnDefinition Width="1*"/>
+                                                <ColumnDefinition Width="1*"/>
+
+                                            </Grid.ColumnDefinitions>
+                                        </Grid>
+
+                                        <syncfusion:SfTextInputLayout  Hint="Enter full path : Cyberpunk 2077\bin\x64\Cyberpunk2077.exe">
+                                            <hc:TextBox
+                                 x:Name="cp77ExeTxtb"
+                                 Margin="0,-15,0,-15"
+                                 hc:InfoElement.Necessary="True"
+                                 hc:InfoElement.Title="Executable Path"
+                                 hc:InfoElement.TitlePlacement="Left"
+                                 hc:InfoElement.TitleWidth="0"
+                                 Style="{StaticResource TextBoxExtendCustom}"
+                                 Text="{Binding CP77ExePath}" />
+                                        </syncfusion:SfTextInputLayout>
+                                        <syncfusion:SfTextInputLayout  Hint="Enter full path : Material Repository Path (Can be any new folder)">
+                                            <hc:TextBox
+                                 x:Name="matdepotxtb"
+                                 Margin="0,-15,0,-15"
+                                 hc:InfoElement.Necessary="True"
+                                 hc:InfoElement.Title="Executable Path"
+                                 hc:InfoElement.TitlePlacement="Left"
+                                 hc:InfoElement.TitleWidth="0"
+                                 Style="{StaticResource TextBoxExtendCustom}"
+                                 Text="fuzzo bind plox" />
+                                        </syncfusion:SfTextInputLayout>
+
+
+
+                                    </StackPanel>
+                                </Grid>
+                            </StackPanel>
+                        </Grid>
+                    </Grid>
+                </Grid>
+            </syncfusion:WizardPage>
+        </syncfusion:WizardControl>
     </Grid>
 </catel:UserControl>
