--- a/WolvenKit/Views/Editor/Basic/ProjectExplorerView.xaml
+++ b/WolvenKit/Views/Editor/Basic/ProjectExplorerView.xaml
@@ -33,6 +33,7 @@
         </Grid.Resources>
 
         <syncfusion:SfTreeGrid
+            Margin="0,0,3,0"
             Name="TreeGrid"
             AllowEditing="False"
             AllowFiltering="False"
@@ -883,13 +884,15 @@
 
         <hc:SearchBar
             x:Name="PESearchBar"
-            Margin="0,0,0,0"
+            Margin="0,0,3,0"
             VerticalAlignment="Top"
             Background="{DynamicResource ContentBackground}"
             BorderBrush="{DynamicResource BorderBrush}"
             FlowDirection="LeftToRight"
             SearchStarted="PESearchBar_OnSearchStarted"
             ShowClearButton="True"
-            Text="search" />
+                                hc:InfoElement.Placeholder="Search"
+                                Style="{StaticResource SearchBarExtend}"
+                                hc:InfoElement.Necessary="True" />
     </Grid>
 </catel:UserControl>
